--- a/算法/算法.md
+++ b/算法/算法.md
@@ -4,141 +4,174 @@
 
 ## 目录
 
-* [常用算法和数据结构总结](#常用算法和数据结构总结)
-    * [排序](#排序)
-        * [冒泡排序](#冒泡排序)
-        * [选择排序](#选择排序)
-        * [插入排序](#插入排序)
-        * [希尔排序](#希尔排序)
-        * [归并排序](#归并排序)
-        * [快速排序](#快速排序)
-        * [堆排序](#堆排序)
-        * [基数排序](#基数排序)
-        * [快速排序相对于其他排序效率更高的原因](#快速排序相对于其他排序效率更高的原因)
-        * [系统自带排序实现](#系统自带排序实现)
-        * [稳定性](#稳定性)
-        * [排序面试题目总结](#排序面试题目总结)
-    * [树](#树)
-        * [二叉树相关性质](#二叉树相关性质)
-        * [满二叉树](#满二叉树)
-        * [完全二叉树](#完全二叉树)
-        * [平衡二叉查找树（AVL）](#平衡二叉查找树avl)
-        * [B-树](#b-树)
-        * [B 树](#b树)
-        * [数据库索引](#数据库索引)
-        * [红黑树](#红黑树)
-        * [Huffman 树](#huffman-树)
-        * [二叉查找树](#二叉查找树)
-        * [求解二叉树中两个节点的最近公共祖先节点](#求解二叉树中两个节点的最近公共祖先节点)
-    * [链表](#链表)
-        * [反转单向链表](#反转单向链表)
-    * [动态规划](#动态规划)
-        * [爬楼梯问题](#爬楼梯问题)
-        * [递归方法分析](#递归方法分析)
-        * [备忘录方法](#备忘录方法)
-        * [迭代法](#迭代法)
-    * [经典笔试题](#经典笔试题)
-      * [1. js 实现一个函数，完成超过范围的两个大整数相加功能](#1-js-实现一个函数完成超过范围的两个大整数相加功能)
-      * [2. js 如何实现数组扁平化？](#2-js-如何实现数组扁平化)
-      * [3. js 如何实现数组去重？](#3-js-如何实现数组去重)
-      * [4. 如何求数组的最大值和最小值？](#4-如何求数组的最大值和最小值)
-      * [5. 如何求两个数的最大公约数？](#5-如何求两个数的最大公约数)
-      * [6. 如何求两个数的最小公倍数？](#6-如何求两个数的最小公倍数)
-      * [7. 实现 IndexOf 方法？](#7-实现-indexof-方法)
-      * [8. 判断一个字符串是否为回文字符串？](#8-判断一个字符串是否为回文字符串)
-      * [9. 实现一个累加函数的功能比如 sum(1,2,3)(2).valueOf()](#9-实现一个累加函数的功能比如-sum1232valueof)
-      * [10. 使用 reduce 方法实现 forEach、map、filter](#10-使用-reduce-方法实现-foreachmapfilter)
-      * [11. 设计一个简单的任务队列，要求分别在 1,3,4 秒后打印出 "1", "2", "3"](#11-设计一个简单的任务队列要求v分别在-134-秒后打印出-1-2-3)
-      * [12. 如何查找一篇英文文章中出现频率最高的单词？](#12-如何查找一篇英文文章中出现频率最高的单词)
-* [常见面试智力题总结](#常见面试智力题总结)
-  * [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
-  * [2. 用3升，5升杯子怎么量出4升水？](#2-用3升5升杯子怎么量出4升水)
-  * [3. 浑浊药罐问题](#3-四个药罐中有一个浑浊的药罐浑浊的每片药片都比其他三个干净的药罐多一克如何只用一次天平找出浑浊的药罐)
-  * [4. 卡片证明问题](#4-四张卡片卡片正面是数字反面是字母现在桌上四张卡片状态为-a-1-b-2-现在我想要证明-a-的反面必然是-1)
-  * [5. 赛马问题，25 匹马，5 个赛道，最少几次能选出最快的三匹马？](#5-赛马问题25-匹马5-个赛道最少几次能选出最快的三匹马)
-  * [6. 五队夫妇参加聚会握手问题](#6-五队夫妇参加聚会每个人不能和自己的配偶握手只能最多和他人握手一次a问了其他人发现每个人的握手次数都)
-  * [7. 你只能带行走 60 公里的油，只能在起始点加油，如何穿过 80 公里的沙漠？](#7-你只能带行走-60-公里的油只能在起始点加油如何穿过-80-公里的沙漠)
-  * [8. 烧一根不均匀的绳要用一个小时，如何用它来判断一个小时十五分钟？](#8-烧一根不均匀的绳要用一个小时如何用它来判断一个小时十五分钟)
-  * [9. 有7克、2克砝码各一个，天平一只，如何只用这些物品三次将140克的盐分成50、90克各一份？](#9-有7克2克砝码各一个天平一只如何只用这些物品三次将140克的盐分成5090克各一份)
-  * [10. 火车相对而行，小鸟飞行距离问题 ](#10-有一辆火车以每小时15公里的速度离开洛杉矶直奔纽约另一辆火车以第小时20公里的速度从纽约开往洛杉矶如果有一只鸟以外30公里每小时的速度和两辆火车现时启动从洛杉矶出发碰到另辆车后返回依次在两辆火车来回的飞行直道两面辆火车相遇请问这只小鸟飞行了多长距离)
-  * [11. 弹球拾取几率问题](#11-你有两个罐子50个红色弹球50个蓝色弹球随机选出一个罐子随机选取出一个弹球放入罐子怎么给红色弹球最大的选中机会在你的计划中得到红球的准确几率是多少)
-  * [12. 8个球使用天平称重问题](#12-假设你有8个球其中一个略微重一些但是找出这个球的惟一方法是将两个球放在天平上对比最少要称多少次才能找出这个较重的球)
-  * [13. 三盏灯区分开关问题](#13-在房里有三盏灯房外有三个开关在房外看不见房内的情况你只能进门一次你用什么方法来区分那个开关控制那一盏灯)
-  * [14. 盲人黑白袜子问题](#14-他们都各自买了两对黑袜和两对白袜八对袜子的布质大小完全相同而每对袜子都有一张商标纸连着两位盲人不小心将八对袜子混在一起他们每人怎样才能取回黑袜和白袜各两对呢)
-  * [15. 水果标签问题](#15-有三筐水果一筐装的全是苹果第二筐装的全是橘子第三筐是橘子与苹果混在一起筐上的标签都是骗人的就是说筐上的标签都是错的你的任务是拿出其中一筐从里面只拿一只水果然后正确写出三筐水果的标签)
-  * [16. 一个班级60%喜欢足球，70%喜欢篮球，80%喜欢排球，问即三种球都喜欢占比有多少？](#16-一个班级60喜欢足球70喜欢篮球80喜欢排球问即三种球都喜欢占比有多少)
-  * [17. 五只鸡五天能下五个蛋，一百天下一百个蛋需要多少只鸡？](#17-五只鸡五天能下五个蛋一百天下一百个蛋需要多少只鸡)
-* [剑指 offer 思路总结](#剑指-offer-思路总结)
-    * [题目](#题目)
-      * [1. 二维数组中的查找](#1-二维数组中的查找)
-      * [2. 替换空格](#2-替换空格)
-      * [3. 从尾到头打印链表](#3-从尾到头打印链表)
-      * [4. 重建二叉树](#4-重建二叉树)
-      * [5. 用两个栈实现队列](#5-用两个栈实现队列)
-      * [6. 旋转数组的最小数字](#6-旋转数组的最小数字)
-      * [7. 斐波那契数列](#7-斐波那契数列)
-      * [8. 跳台阶](#8-跳台阶)
-      * [9. 变态跳台阶](#9-变态跳台阶)
-      * [10. 矩形覆盖](#10-矩形覆盖)
-      * [11. 二进制中1的个数](#11-二进制中1的个数)
-      * [12. 数值的整数次方](#12-数值的整数次方)
-      * [13. 调整数组顺序使奇数位于偶数前面](#13-调整数组顺序使奇数位于偶数前面)
-      * [14. 链表中倒数第 k 个节点](#14-链表中倒数第-k-个节点)
-      * [15. 反转链表](#15-反转链表)
-      * [16. 合并两个排序的链表](#16-合并两个排序的链表)
-      * [17. 树的子结构](#17-树的子结构)
-      * [18. 二叉树的镜像](#18-二叉树的镜像)
-      * [19. 顺时针打印矩阵](#19-顺时针打印矩阵)
-      * [20. 定义一个栈，实现 min 函数](#20-定义一个栈实现-min-函数)
-      * [21. 栈的压入弹出](#21-栈的压入弹出)
-      * [22. 从上往下打印二叉树](#22-从上往下打印二叉树)
-      * [23. 二叉搜索树的后序遍历](#23-二叉搜索树的后序遍历)
-      * [24. 二叉树中和为某一值路径](#24-二叉树中和为某一值路径)
-      * [25. 复杂链表的复制](#25-复杂链表的复制)
-      * [26. 二叉搜索树与双向链表](#26-二叉搜索树与双向链表)
-      * [27. 字符串的排列](#27-字符串的排列)
-      * [28. 数组中出现次数超过一半的数字](#28-数组中出现次数超过一半的数字)
-      * [29. 最小的 K 个数](#29-最小的-k-个数)
-      * [30. 连续子数组的最大和](#30-连续子数组的最大和)
-      * [31. 整数中1出现的次数（待深入理解）](#31-整数中1出现的次数待深入理解)
-      * [32. 把数组排成最小的数](#32-把数组排成最小的数)
-      * [33. 丑数（待深入理解）](#33-丑数待深入理解)
-      * [34. 第一个只出现一次的字符](#34-第一个只出现一次的字符)
-      * [35. 数组中的逆序对](#35-数组中的逆序对)
-      * [36. 两个链表的第一个公共结点](#36-两个链表的第一个公共结点)
-      * [37. 数字在排序数组中出现的次数](#37-数字在排序数组中出现的次数)
-      * [38. 二叉树的深度](#38-二叉树的深度)
-      * [39. 平衡二叉树](#39-平衡二叉树)
-      * [40. 数组中只出现一次的数字](#40-数组中只出现一次的数字)
-      * [41. 和为 S 的连续正数序列](#41-和为-s-的连续正数序列)
-      * [42. 和为 S 的两个数字](#42-和为-s-的两个数字)
-      * [43. 左旋转字符串](#43-左旋转字符串)
-      * [44. 翻转单词顺序列](#44-翻转单词顺序列)
-      * [45. 扑克牌的顺子](#45-扑克牌的顺子)
-      * [46. 圆圈中最后剩下的数字（约瑟夫环问题）](#46-圆圈中最后剩下的数字约瑟夫环问题)
-      * [47. 1 2 3 ... n](#47-123n)
-      * [48. 不用加减乘除做加法](#48-不用加减乘除做加法)
-      * [49. 把字符串转换成整数。](#49-把字符串转换成整数)
-      * [50. 数组中重复的数字](#50-数组中重复的数字)
-      * [51. 构建乘积数组](#51-构建乘积数组)
-      * [52. 正则表达式的匹配](#52-正则表达式的匹配)
-      * [53. 表示数值的字符串](#53-表示数值的字符串)
-      * [54. 字符流中第一个不重复的字符](#54-字符流中第一个不重复的字符)
-      * [55. 链表中环的入口结点](#55-链表中环的入口结点)
-      * [56. 删除链表中重复的结点](#56-删除链表中重复的结点)
-      * [57. 二叉树的下一个结点](#57-二叉树的下一个结点)
-      * [58. 对称二叉树](#58-对称二叉树)
-      * [59. 按之字形顺序打印二叉树（待深入理解）](#59-按之字形顺序打印二叉树待深入理解)
-      * [60. 从上到下按层打印二叉树，同一层结点从左至右输出。每一层输出一行。](#60-从上到下按层打印二叉树同一层结点从左至右输出每一层输出一行)
-      * [61. 序列化二叉树（待深入理解）](#61-序列化二叉树待深入理解)
-      * [62. 二叉搜索树的第 K 个节点](#62-二叉搜索树的第-k-个节点)
-      * [63. 数据流中的中位数（待深入理解）](#63-数据流中的中位数待深入理解)
-      * [64. 滑动窗口中的最大值（待深入理解）](#64-滑动窗口中的最大值待深入理解)
-      * [65. 矩阵中的路径（待深入理解）](#65-矩阵中的路径待深入理解)
-      * [66. 机器人的运动范围（待深入理解）](#66-机器人的运动范围待深入理解)
-    * [相关算法题](#相关算法题)
-      * [1. 明星问题](#1-明星问题)
-      * [2. 正负数组求和](#2-正负数组求和)
+- [算法知识总结](#算法知识总结)
+  - [目录](#目录)
+- [常用算法和数据结构总结](#常用算法和数据结构总结)
+  - [排序](#排序)
+    - [冒泡排序](#冒泡排序)
+    - [选择排序](#选择排序)
+    - [插入排序](#插入排序)
+    - [希尔排序](#希尔排序)
+    - [归并排序](#归并排序)
+    - [快速排序](#快速排序)
+    - [堆排序](#堆排序)
+    - [基数排序](#基数排序)
+    - [快速排序相对于其他排序效率更高的原因](#快速排序相对于其他排序效率更高的原因)
+    - [系统自带排序实现](#系统自带排序实现)
+    - [稳定性](#稳定性)
+    - [排序面试题目总结](#排序面试题目总结)
+  - [树](#树)
+    - [二叉树相关性质](#二叉树相关性质)
+    - [满二叉树](#满二叉树)
+    - [完全二叉树](#完全二叉树)
+    - [平衡二叉查找树（AVL）](#平衡二叉查找树avl)
+    - [B-树](#b-树)
+    - [B+树](#b树)
+    - [数据库索引](#数据库索引)
+    - [红黑树](#红黑树)
+    - [Huffman 树](#huffman-树)
+    - [二叉查找树](#二叉查找树)
+    - [求解二叉树中两个节点的最近公共祖先节点](#求解二叉树中两个节点的最近公共祖先节点)
+  - [链表](#链表)
+    - [反转单向链表](#反转单向链表)
+  - [动态规划](#动态规划)
+    - [爬楼梯问题](#爬楼梯问题)
+      - [递归方法分析](#递归方法分析)
+      - [备忘录方法](#备忘录方法)
+      - [迭代法](#迭代法)
+  - [经典面试题](#经典面试题)
+      - [1. flex：1 - 1 1 0%](#1-flex1---1-1-0)
+      - [2. 什么是闭包](#2-什么是闭包)
+      - [3.异步方式](#3异步方式)
+      - [4.CSRF & XSS](#4csrf--xss)
+      - [5.js动画为什么比css的transform要慢](#5js动画为什么比css的transform要慢)
+      - [6.Http和Https区别](#6http和https区别)
+      - [7.TCP三次握手和四次挥手](#7tcp三次握手和四次挥手)
+      - [8.TLS握手](#8tls握手)
+      - [9.对称加密和非对称加密（RSA）](#9对称加密和非对称加密rsa)
+      - [10.中间人攻击问题](#10中间人攻击问题)
+      - [11.DNS协议](#11dns协议)
+      - [12.UDP协议](#12udp协议)
+      - [13.当你在浏览器中输入 Google.com 并且按下回车之后发生了什么？](#13当你在浏览器中输入-googlecom-并且按下回车之后发生了什么)
+      - [14.什么是 MVVM？比之 MVC 有什么区别？什么又是 MVP ？](#14什么是-mvvm比之-mvc-有什么区别什么又是-mvp-)
+      - [15.vue 双向数据绑定原理？](#15vue-双向数据绑定原理)
+      - [16.CROS跨域](#16cros跨域)
+      - [17. Cookie与Session的区别和联系还有Token](#17-cookie与session的区别和联系还有token)
+      - [18.Vue 的各个生命阶段是什么？](#18vue-的各个生命阶段是什么)
+      - [19.箭头函数和普通函数有什么区别？](#19箭头函数和普通函数有什么区别)
+  - [经典笔试题](#经典笔试题)
+      - [1. js 实现一个函数，完成超过范围的两个大整数相加功能](#1-js-实现一个函数完成超过范围的两个大整数相加功能)
+      - [2. js 如何实现数组扁平化？](#2-js-如何实现数组扁平化)
+      - [3. js 如何实现数组去重？](#3-js-如何实现数组去重)
+      - [4. 如何求数组的最大值和最小值？](#4-如何求数组的最大值和最小值)
+      - [5. 如何求两个数的最大公约数？](#5-如何求两个数的最大公约数)
+      - [6. 如何求两个数的最小公倍数？](#6-如何求两个数的最小公倍数)
+      - [7. 实现 IndexOf 方法？](#7-实现-indexof-方法)
+      - [8. 判断一个字符串是否为回文字符串？](#8-判断一个字符串是否为回文字符串)
+      - [9. 实现一个累加函数的功能比如 sum(1,2,3)(2).valueOf()](#9-实现一个累加函数的功能比如-sum1232valueof)
+      - [10. 使用 reduce 方法实现 forEach、map、filter](#10-使用-reduce-方法实现-foreachmapfilter)
+      - [11. 设计一个简单的任务队列，要求分别在 1,3,4 秒后打印出 "1", "2", "3"](#11-设计一个简单的任务队列要求分别在-134-秒后打印出-1-2-3)
+      - [12. 如何查找一篇英文文章中出现频率最高的单词？](#12-如何查找一篇英文文章中出现频率最高的单词)
+      - [13. 发布订阅模式和手写](#13-发布订阅模式和手写)
+      - [14. 节流与防抖](#14-节流与防抖)
+      - [15.字符串数组转数组](#15字符串数组转数组)
+      - [16.深拷贝与浅拷贝](#16深拷贝与浅拷贝)
+      - [17.手写 call、apply 及 bind 函数](#17手写-callapply-及-bind-函数)
+      - [18.函数柯里化的实现](#18函数柯里化的实现)
+      - [19.手写一个 jsonp](#19手写一个-jsonp)
+      - [20.使用闭包实现每隔一秒打印 1,2,3,4](#20使用闭包实现每隔一秒打印-1234)
+      - [21.new 的实现](#21new-的实现)
+      - [22.instanceof 的原理](#22instanceof-的原理)
+      - [23.手写一个 Promise](#23手写一个-promise)
+- [常见面试智力题总结](#常见面试智力题总结)
+      - [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
+      - [2. 用3升，5升杯子怎么量出4升水？](#2-用3升5升杯子怎么量出4升水)
+      - [3. 四个药罐中有一个浑浊的药罐，浑浊的每片药片都比其他三个干净的药罐多一克，如何只用一次天平找出浑浊的药罐？](#3-四个药罐中有一个浑浊的药罐浑浊的每片药片都比其他三个干净的药罐多一克如何只用一次天平找出浑浊的药罐)
+      - [4. 四张卡片，卡片正面是数字，反面是字母。现在桌上四张卡片，状态为 a 1 b 2 现在我想要证明 a 的反面必然是 1 ，我只能翻两张牌，我翻哪两张？](#4-四张卡片卡片正面是数字反面是字母现在桌上四张卡片状态为-a-1-b-2-现在我想要证明-a-的反面必然是-1-我只能翻两张牌我翻哪两张)
+      - [5. 赛马问题，25 匹马，5 个赛道，最少几次能选出最快的三匹马？](#5-赛马问题25-匹马5-个赛道最少几次能选出最快的三匹马)
+      - [6. 五队夫妇参加聚会，每个人不能和自己的配偶握手，只能最多和他人握手一次。A问了其他人，发现每个人的握手次数都不同，那么A的配偶握手了几次？](#6-五队夫妇参加聚会每个人不能和自己的配偶握手只能最多和他人握手一次a问了其他人发现每个人的握手次数都不同那么a的配偶握手了几次)
+      - [7. 你只能带行走 60 公里的油，只能在起始点加油，如何穿过 80 公里的沙漠？](#7-你只能带行走-60-公里的油只能在起始点加油如何穿过-80-公里的沙漠)
+      - [8. 烧一根不均匀的绳要用一个小时，如何用它来判断一个小时十五分钟？](#8-烧一根不均匀的绳要用一个小时如何用它来判断一个小时十五分钟)
+      - [9. 有7克、2克砝码各一个，天平一只，如何只用这些物品三次将140克的盐分成50、90克各一份？](#9-有7克2克砝码各一个天平一只如何只用这些物品三次将140克的盐分成5090克各一份)
+      - [10. 有一辆火车以每小时15公里的速度离开洛杉矶直奔纽约，另一辆火车以第 小时20公里的速度从纽约开往洛杉矶。如果有一只鸟，以外30公里每小时的速度和 两辆火车现时启动，从洛杉矶出发，碰到另辆车后返回，依次在两辆火车来回的飞行，直道两面辆火车相遇，请问，这只小鸟飞行了多长距离？](#10-有一辆火车以每小时15公里的速度离开洛杉矶直奔纽约另一辆火车以第小时20公里的速度从纽约开往洛杉矶如果有一只鸟以外30公里每小时的速度和两辆火车现时启动从洛杉矶出发碰到另辆车后返回依次在两辆火车来回的飞行直道两面辆火车相遇请问这只小鸟飞行了多长距离)
+      - [11. 你有两个罐子，50个红色弹球，50个蓝色弹球，随机选出一个罐子，随机选取出一个弹球放入罐子，怎么给红色弹球最大的选中机会？在你的计划中，得到红球的准确几率是多少？](#11-你有两个罐子50个红色弹球50个蓝色弹球随机选出一个罐子随机选取出一个弹球放入罐子怎么给红色弹球最大的选中机会在你的计划中得到红球的准确几率是多少)
+      - [12. 假设你有8个球，其中一个略微重一些，但是找出这个球的惟一方法是将两个球放在天平上对比。最少要称多少次才能找出这个较重的球？](#12-假设你有8个球其中一个略微重一些但是找出这个球的惟一方法是将两个球放在天平上对比最少要称多少次才能找出这个较重的球)
+      - [13. 在房里有三盏灯，房外有三个开关，在房外看不见房内的情况，你只能进门一次，你用什么方法来区分那个开关控制那一盏灯？](#13-在房里有三盏灯房外有三个开关在房外看不见房内的情况你只能进门一次你用什么方法来区分那个开关控制那一盏灯)
+      - [14. 他们都各自买了两对黑袜和两对白袜，八对袜子的布质、大小完全相同，而每对袜子都有一张商标纸连着。两位盲人不小心将八对袜子混在一起。他们每人怎样才能取回黑袜和白袜各两对呢？](#14-他们都各自买了两对黑袜和两对白袜八对袜子的布质大小完全相同而每对袜子都有一张商标纸连着两位盲人不小心将八对袜子混在一起他们每人怎样才能取回黑袜和白袜各两对呢)
+      - [15. 有三筐水果，一筐装的全是苹果，第二筐装的全是橘子，第三筐是橘子与苹果混在一起。筐上的标签都是骗人的，（就是说筐上的标签都是错的）你的任务是拿出其中一筐，从里面只拿一只水果，然后正确写出三筐水果的标签。](#15-有三筐水果一筐装的全是苹果第二筐装的全是橘子第三筐是橘子与苹果混在一起筐上的标签都是骗人的就是说筐上的标签都是错的你的任务是拿出其中一筐从里面只拿一只水果然后正确写出三筐水果的标签)
+      - [16. 一个班级60%喜欢足球，70%喜欢篮球，80%喜欢排球，问即三种球都喜欢占比有多少？](#16-一个班级60喜欢足球70喜欢篮球80喜欢排球问即三种球都喜欢占比有多少)
+      - [17. 五只鸡五天能下五个蛋，一百天下一百个蛋需要多少只鸡？](#17-五只鸡五天能下五个蛋一百天下一百个蛋需要多少只鸡)
+- [剑指 offer 思路总结](#剑指-offer-思路总结)
+  - [题目](#题目)
+      - [1. 二维数组中的查找](#1-二维数组中的查找)
+      - [2. 替换空格](#2-替换空格)
+      - [3. 从尾到头打印链表](#3-从尾到头打印链表)
+      - [4. 重建二叉树](#4-重建二叉树)
+      - [5. 用两个栈实现队列](#5-用两个栈实现队列)
+      - [6. 旋转数组的最小数字](#6-旋转数组的最小数字)
+      - [7. 斐波那契数列](#7-斐波那契数列)
+      - [8. 跳台阶](#8-跳台阶)
+      - [9. 变态跳台阶](#9-变态跳台阶)
+      - [10. 矩形覆盖](#10-矩形覆盖)
+      - [11. 二进制中1的个数](#11-二进制中1的个数)
+      - [12. 数值的整数次方](#12-数值的整数次方)
+      - [13. 调整数组顺序使奇数位于偶数前面](#13-调整数组顺序使奇数位于偶数前面)
+      - [14. 链表中倒数第 k 个节点](#14-链表中倒数第-k-个节点)
+      - [15. 反转链表](#15-反转链表)
+      - [16. 合并两个排序的链表](#16-合并两个排序的链表)
+      - [17. 树的子结构](#17-树的子结构)
+      - [18. 二叉树的镜像](#18-二叉树的镜像)
+      - [19. 顺时针打印矩阵](#19-顺时针打印矩阵)
+      - [20. 定义一个栈，实现 min 函数](#20-定义一个栈实现-min-函数)
+      - [21. 栈的压入弹出](#21-栈的压入弹出)
+      - [22. 从上往下打印二叉树](#22-从上往下打印二叉树)
+      - [23. 二叉搜索树的后序遍历](#23-二叉搜索树的后序遍历)
+      - [24. 二叉树中和为某一值路径](#24-二叉树中和为某一值路径)
+      - [25. 复杂链表的复制](#25-复杂链表的复制)
+      - [26. 二叉搜索树与双向链表](#26-二叉搜索树与双向链表)
+      - [27. 字符串的排列](#27-字符串的排列)
+      - [28. 数组中出现次数超过一半的数字](#28-数组中出现次数超过一半的数字)
+      - [29. 最小的 K 个数](#29-最小的-k-个数)
+      - [30. 连续子数组的最大和](#30-连续子数组的最大和)
+      - [31. 整数中1出现的次数（待深入理解）](#31-整数中1出现的次数待深入理解)
+      - [32. 把数组排成最小的数](#32-把数组排成最小的数)
+      - [33. 丑数（待深入理解）](#33-丑数待深入理解)
+      - [34. 第一个只出现一次的字符](#34-第一个只出现一次的字符)
+      - [35. 数组中的逆序对](#35-数组中的逆序对)
+      - [36. 两个链表的第一个公共结点](#36-两个链表的第一个公共结点)
+      - [37. 数字在排序数组中出现的次数](#37-数字在排序数组中出现的次数)
+      - [38. 二叉树的深度](#38-二叉树的深度)
+      - [39. 平衡二叉树](#39-平衡二叉树)
+      - [40. 数组中只出现一次的数字](#40-数组中只出现一次的数字)
+      - [41. 和为 S 的连续正数序列](#41-和为-s-的连续正数序列)
+      - [42. 和为 S 的两个数字](#42-和为-s-的两个数字)
+      - [43. 左旋转字符串](#43-左旋转字符串)
+      - [44. 翻转单词顺序列](#44-翻转单词顺序列)
+      - [45. 扑克牌的顺子](#45-扑克牌的顺子)
+      - [46. 圆圈中最后剩下的数字（约瑟夫环问题）](#46-圆圈中最后剩下的数字约瑟夫环问题)
+      - [47. 1+2+3+...+n](#47-123n)
+      - [48. 不用加减乘除做加法](#48-不用加减乘除做加法)
+      - [49. 把字符串转换成整数。](#49-把字符串转换成整数)
+      - [50. 数组中重复的数字](#50-数组中重复的数字)
+      - [51. 构建乘积数组](#51-构建乘积数组)
+      - [52. 正则表达式的匹配](#52-正则表达式的匹配)
+      - [53. 表示数值的字符串](#53-表示数值的字符串)
+      - [54. 字符流中第一个不重复的字符](#54-字符流中第一个不重复的字符)
+      - [55. 链表中环的入口结点](#55-链表中环的入口结点)
+      - [56. 删除链表中重复的结点](#56-删除链表中重复的结点)
+      - [57. 二叉树的下一个结点](#57-二叉树的下一个结点)
+      - [58. 对称二叉树](#58-对称二叉树)
+      - [59. 按之字形顺序打印二叉树（待深入理解）](#59-按之字形顺序打印二叉树待深入理解)
+      - [60. 从上到下按层打印二叉树，同一层结点从左至右输出。每一层输出一行。](#60-从上到下按层打印二叉树同一层结点从左至右输出每一层输出一行)
+      - [61. 序列化二叉树（待深入理解）](#61-序列化二叉树待深入理解)
+      - [62. 二叉搜索树的第 K 个节点](#62-二叉搜索树的第-k-个节点)
+      - [63. 数据流中的中位数（待深入理解）](#63-数据流中的中位数待深入理解)
+      - [64. 滑动窗口中的最大值（待深入理解）](#64-滑动窗口中的最大值待深入理解)
+      - [65. 矩阵中的路径（待深入理解）](#65-矩阵中的路径待深入理解)
+      - [66. 机器人的运动范围（待深入理解）](#66-机器人的运动范围待深入理解)
+  - [相关算法题](#相关算法题)
+      - [1. 明星问题](#1-明星问题)
+      - [2. 正负数组求和](#2-正负数组求和)
 
 # 常用算法和数据结构总结
 
@@ -1404,6 +1437,384 @@ function getClimbingWays(n) {
 详细资料可以参考：
 [《漫画：什么是动态规划？（整合版）》](https://mp.weixin.qq.com/s?__biz=MzI1MTIzMzI2MA==&mid=2650561168&idx=1&sn=9d1c6f7ba6d651c75399c4aa5254a7d8&chksm=f1feec13c6896505f7886d9455278ad39749d377a63908c59c1fdceb11241e577ff6d66931e4&scene=21#wechat_redirect)
 
+## 经典面试题
+#### 1. flex：1 - 1 1 0%
+justify-content属性定义了项目在主轴上的对齐方式。
+align-items属性定义项目在交叉轴上如何对齐。
+order属性定义项目的排列顺序。数值越小，排列越靠前，默认为0。
+flex-grow属性定义项目的放大比例，默认为0，即如果存在剩余空间，也不放大。
+flex-shrink属性定义了项目的缩小比例，默认为1，即如果空间不足，该项目将缩小。
+flex-basis属性定义了在分配多余空间之前，项目占据的主轴空间。浏览器根据这个属性，计算主轴是否有多余空间。它的默认
+值为auto，即项目的本来大小。
+flex：1 -- 元素尺寸可以弹性增大，也可以弹性变小，具有十足的弹性，但是flex:1在尺寸不足时会优先最小化内容尺寸，flex:auto在尺寸不足时会优先最大化内容尺寸。
+#### 2. 什么是闭包
+闭包是指有权访问另一个函数作用域中变量的函数，创建闭包的最常见的方式就是在一个函数内创建另一个函数，创建的函数可以
+访问到当前函数的局部变量。
+
+闭包有两个常用的用途。
+
+闭包的第一个用途是使我们在函数外部能够访问到函数内部的变量。通过使用闭包，我们可以通过在外部调用闭包函数，从而在外
+部访问到函数内部的变量，可以使用这种方法来创建私有变量。
+
+函数的另一个用途是使已经运行结束的函数上下文中的变量对象继续留在内存中，因为闭包函数保留了这个变量对象的引用，所以
+这个变量对象不会被回收。
+
+其实闭包的本质就是作用域链的一个特殊的应用，只要了解了作用域链的创建过程，就能够理解闭包的实现原理。
+#### 3.异步方式
+回调函数
+优点：简单、容易理解
+缺点：不利于维护，代码耦合高
+
+事件监听（采用时间驱动模式，取决于某个事件是否发生）：
+优点：容易理解，可以绑定多个事件，每个事件可以指定多个回调函数
+缺点：事件驱动型，流程不够清晰
+
+发布/订阅（观察者模式）
+类似于事件监听，但是可以通过‘消息中心’，了解现在有多少发布者，多少订阅者
+
+Promise 对象
+优点：可以利用 then 方法，进行链式写法；可以书写错误时的回调函数；
+缺点：编写和理解，相对比较难
+
+Generator 函数
+优点：函数体内外的数据交换、错误处理机制
+缺点：流程管理不方便
+
+async 函数
+优点：内置执行器、更好的语义、更广的适用性、返回的是 Promise、结构清晰。
+缺点：错误处理机制
+#### 4.CSRF & XSS
+xss:
+XSS 攻击指的是跨站脚本攻击，是一种代码注入攻击。攻击者通过在网站注入恶意脚本，使之在用户的浏览器上运行，从而盗取用户的信息如 cookie 等。
+
+XSS 的本质是因为网站没有对恶意代码进行过滤，与正常的代码混合在一起了，浏览器没有办法分辨哪些脚本是可信的，从而导致了恶意代码的执行。
+
+XSS 一般分为存储型、反射型和 DOM 型。
+
+存储型指的是恶意代码提交到了网站的数据库中，当用户请求数据的时候，服务器将其拼接为 HTML 后返回给了用户，从而导致了恶意代码的执行。
+
+反射型指的是攻击者构建了特殊的 URL，当服务器接收到请求后，从 URL 中获取数据，拼接到 HTML 后返回，从而导致了恶意代码的执行。
+
+DOM 型指的是攻击者构建了特殊的 URL，用户打开网站后，js 脚本从 URL 中获取数据，从而导致了恶意代码的执行。
+
+XSS 攻击的预防可以从两个方面入手，一个是恶意代码提交的时候，一个是浏览器执行恶意代码的时候。
+CSRF:
+CSRF 攻击指的是跨站请求伪造攻击，攻击者诱导用户进入一个第三方网站，然后该网站向被攻击网站发送跨站请求。如果用户在被
+攻击网站中保存了登录状态，那么攻击者就可以利用这个登录状态，绕过后台的用户验证，冒充用户向服务器执行一些操作。
+
+CSRF 攻击的本质是利用了 cookie 会在同源请求中携带发送给服务器的特点，以此来实现用户的冒充。
+
+一般的 CSRF 攻击类型有三种：
+
+第一种是 GET 类型的 CSRF 攻击，比如在网站中的一个 img 标签里构建一个请求，当用户打开这个网站的时候就会自动发起提
+交。
+
+第二种是 POST 类型的 CSRF 攻击，比如说构建一个表单，然后隐藏它，当用户进入页面时，自动提交这个表单。
+
+第三种是链接类型的 CSRF 攻击，比如说在 a 标签的 href 属性里构建一个请求，然后诱导用户去点击。
+
+CSRF 可以用下面几种方法来防护：
+
+第一种是同源检测的方法，服务器根据 http 请求头中 origin 或者 referer 信息来判断请求是否为允许访问的站点，从而对请求进行过滤。当 origin 或者 referer 信息都不存在的时候，直接阻止。这种方式的缺点是有些情况下 referer 可以被伪造。还有就是我们这种方法同时把搜索引擎的链接也给屏蔽了，所以一般网站会允许搜索引擎的页面请求，但是相应的页面请求这种请求方式也可能被攻击者给利用。
+
+第二种方法是使用 CSRF Token 来进行验证，服务器向用户返回一个随机数 Token ，当网站再次发起请求时，在请求参数中加入服务器端返回的 token ，然后服务器对这个 token 进行验证。这种方法解决了使用 cookie 单一验证方式时，可能会被冒用的问题，但是这种方法存在一个缺点就是，我们需要给网站中的所有请求都添加上这个 token，操作比较繁琐。还有一个问题是一般不会只有一台网站服务器，如果我们的请求经过负载平衡转移到了其他的服务器，但是这个服务器的 session 中没有保留这个 token 的话，就没有办法验证了。这种情况我们可以通过改变 token 的构建方式来解决。
+
+第三种方式使用双重 Cookie 验证的办法，服务器在用户访问网站页面时，向请求域名注入一个Cookie，内容为随机字符串，然后当用户再次向服务器发送请求的时候，从 cookie 中取出这个字符串，添加到 URL 参数中，然后服务器通过对 cookie 中的数据和参数中的数据进行比较，来进行验证。使用这种方式是利用了攻击者只能利用 cookie，但是不能访问获取 cookie 的特点。并且这种方法比 CSRF Token 的方法更加方便，并且不涉及到分布式访问的问题。这种方法的缺点是如果网站存在 XSS 漏洞的，那么这种方式会失效。同时这种方式不能做到子域名的隔离。
+
+第四种方式是使用在设置 cookie 属性的时候设置 Samesite ，限制 cookie 不能作为被第三方使用，从而可以避免被攻击者利用。Samesite 一共有两种模式，一种是严格模式，在严格模式下 cookie 在任何情况下都不可能作为第三方 Cookie 使用，在宽松模式下，cookie 可以被请求是 GET 请求，且会发生页面跳转的请求所使用。
+
+#### 5.js动画为什么比css的transform要慢
+导致JavaScript效率低的两大原因：操作DOM和使用页面动画。
+
+通常我们会通过频繁的操作 DOM的css来实现视觉上的动画效果，导致js效率低的两个因素都包括在内了在频繁的操作DOM和css时，浏览器会不停的执行重排和重绘，在PC版本的浏览器中，因为浏览器可用的内存比较大，用户肉眼几乎看不见页面动画产生的repaint和reflow 
+
+
+用CSS3动画替代js模拟动画的好处：
+
+不占用JS主线程；
+可以利用硬件加速；
+浏览器可对动画做优化（元素不可见时不动画减少对FPS影响）
+
+transform属性，适用于2D或3D转换的元素
+translate()方法，根据左(X轴)和顶部(Y轴)位置给定的参数，从当前元素位置移动
+rotate()方法，在一个给定度数顺时针旋转的元素。负值是允许的，这样是元素逆时针旋转。
+scale()方法，该元素增加或减少的大小，取决于宽度（X轴）和高度（Y轴）的参数
+
+#### 6.Http和Https区别
+HTTP 是超文本传输协议，它定义了客户端和服务器之间交换报文的格式和方式，默认使用 80 端口。它使用 TCP 作为传 输层协议，保证了数据传输的可靠性。
+
+HTTP 是一个无状态的协议，HTTP 服务器不会保存关于客户的任何信息。
+
+HTTP 有两种连接模式，一种是持续连接，一种非持续连接。非持续连接指的是服务器必须为每一个请求的对象建立和维护 一个全新的连接。持续连接下，TCP 连接默认不关闭，可以被多个请求复用。采用持续连接的好处是可以避免每次建立 TCP 连接三次握手时所花费的时间。在 HTTP1.0 以前使用的非持续的连接，但是可以在请求时，加上 Connection: keep-a live 来要求服务器不要关闭 TCP 连接。HTTP1.1 以后默认采用的是持续的连接。目前对于同一个域，大多数浏览器支持 同时建立 6 个持久连接。
+
+
+
+HTTP 与 HTTPS 区别
+HTTP 明文传输，数据都是未加密的，安全性较差，HTTPS（SSL+HTTP） 数据传输过程是加密的，安全性较好。
+HTTP 存在的问题
+HTTP 报文使用明文方式发送，可能被第三方窃听。
+HTTP 报文可能被第三方截取后修改通信内容，接收方没有办法发现报文内容的修改。
+
+HTTP 还存在认证的问题，第三方可以冒充他人参与通信。
+使用 HTTPS 协议需要到 CA（Certificate Authority，数字证书认证机构） 申请证书，一般免费证书较少，因而需要一定费用。证书颁发机构如：Symantec、Comodo、GoDaddy 和 GlobalSign 等。
+HTTP 页面响应速度比 HTTPS 快，主要是因为 HTTP 使用 TCP 三次握手建立连接，客户端和服务器需要交换 3 个包，而 HTTPS除了 TCP 的三个包，还要加上 ssl 握手需要的 9 个包，所以一共是 12 个包。
+http 和 https 使用的是完全不同的连接方式，用的端口也不一样，前者是 80，后者是 443。
+HTTPS 其实就是建构在 SSL/TLS 之上的 HTTP 协议，所以，要比较 HTTPS 比 HTTP 要更耗费服务器资源。
+
+HTTP链接过程：
+HTTPS 默认工作在 TCP 协议443端口，它的工作流程一般如以下方式：
+
+1、TCP 三次同步握手
+2、客户端验证服务器数字证书
+3、DH 算法协商对称加密算法的密钥、hash 算法的密钥
+4、SSL 安全加密隧道协商完成
+5、网页以加密的方式传输，用协商的对称加密算法和密钥加密，保证数据机密性；用协商的hash算法进行数据完整性保护，保证数据不被篡改。
+
+#### 7.TCP三次握手和四次挥手
+第一次握手：客户端尝试连接服务器，向服务器发送 syn 包（同步序列编号Synchronize Sequence Numbers），syn=j，客户端进入 SYN_SEND 状态等待服务器确认
+第二次握手：服务器接收客户端syn包并确认（ack=j+1），同时向客户端发送一个 SYN包（syn=k），即 SYN+ACK 包，此时服务器进入 SYN_RECV 状态
+第三次握手：第三次握手：客户端收到服务器的SYN+ACK包，向服务器发送确认包ACK(ack=k+1），此包发送完毕，客户端和服务器进入ESTABLISHED状态，完成三次握手
+
+TCP四次挥手
+
+主动断开方（客户端/服务端）-发送一个 FIN，用来关闭主动断开方（客户端/服务端）到被动断开方（客户端/服务端）的数据传送
+
+被动断开方（客户端/服务端）-收到这个 FIN，它发回一 个 ACK，确认序号为收到的序号加1 。和 SYN 一样，一个 FIN 将占用一个序号
+
+被动点开方（客户端/服务端）-关闭与主动断开方（客户端/服务端）的连接，发送一个FIN给主动断开方（客户端/服务端）
+
+主动断开方（客户端/服务端）-发回 ACK 报文确认，并将确认序号设置为收到序号加1
+
+Q：为什么连接的时候是三次握手，关闭的时候却是四次握手？
+
+建立连接的时候， 服务器在LISTEN状态下，收到建立连接请求的SYN报文后，把ACK和SYN放在一个报文里发送给客户端。关闭连接时，服务器收到对方的FIN报文时，仅仅表示对方不再发送数据了但是还能接收数据，而自己也未必全部数据都发送给对方了,所以服务器可以立即关闭，也可以发送一些数据给对方后，再发送FIN报文给对方来表示同意现在关闭连接。因此，服务器ACK和FIN一般都会分开发送，从而导致多了一次。
+
+
+#### 8.TLS握手
+TLS 握手过程
+第一步，客户端向服务器发起请求，请求中包含使用的协议版本号、生成的一个随机数、以及客户端支持的加密方法。
+
+第二步，服务器端接收到请求后，确认双方使用的加密方法、并给出服务器的证书、以及一个服务器生成的随机数。
+
+第三步，客户端确认服务器证书有效后，生成一个新的随机数，并使用数字证书中的公钥，加密这个随机数，然后发给服 务器。并且还会提供一个前面所有内容的 hash 的值，用来供服务器检验。
+
+第四步，服务器使用自己的私钥，来解密客户端发送过来的随机数。并提供前面所有内容的 hash 值来供客户端检验。
+
+第五步，客户端和服务器端根据约定的加密方法使用前面的三个随机数，生成对话秘钥，以后的对话过程都使用这个秘钥 来加密信息。
+
+#### 9.对称加密和非对称加密（RSA）
+首先是对称加密的方法，对称加密的方法是，双方使用同一个秘钥对数据进行加密和解密。但是对称加密的存在一个问题，就 是如何保证秘钥传输的安全性，因为秘钥还是会通过网络传输的，一旦秘钥被其他人获取到，那么整个加密过程就毫无作用了。 这就要用到非对称加密的方法。
+
+非对称加密的方法是，我们拥有两个秘钥，一个是公钥，一个是私钥。公钥是公开的，私钥是保密的。用私钥加密的数据，只 有对应的公钥才能解密，用公钥加密的数据，只有对应的私钥才能解密。我们可以将公钥公布出去，任何想和我们通信的客户， 都可以使用我们提供的公钥对数据进行加密，这样我们就可以使用私钥进行解密，这样就能保证数据的安全了。但是非对称加 密有一个缺点就是加密的过程很慢，因此如果每次通信都使用非对称加密的方式的话，反而会造成等待时间过长的问题。
+
+因此我们可以使用对称加密和非对称加密结合的方式，因为对称加密的方式的缺点是无法保证秘钥的安全传输，因此我们可以 非对称加密的方式来对对称加密的秘钥进行传输，然后以后的通信使用对称加密的方式来加密，这样就解决了两个方法各自存 在的问题。
+
+#### 10.中间人攻击问题
+但是现在的方法也不一定是安全的，因为我们没有办法确定我们得到的公钥就一定是安全的公钥。可能存在一个中间人，截取 了对方发给我们的公钥，然后将他自己的公钥发送给我们，当我们使用他的公钥加密后发送的信息，就可以被他用自己的私钥 解密。然后他伪装成我们以同样的方法向对方发送信息，这样我们的信息就被窃取了，然而我们自己还不知道。
+
+为了解决这样的问题，我们可以使用数字证书的方式，首先我们使用一种 Hash 算法来对我们的公钥和其他信息进行加密生成 一个信息摘要，然后让有公信力的认证中心（简称 CA ）用它的私钥对消息摘要加密，形成签名。最后将原始的信息和签名合 在一起，称为数字证书。当接收方收到数字证书的时候，先根据原始信息使用同样的 Hash 算法生成一个摘要，然后使用公证 处的公钥来对数字证书中的摘要进行解密，最后将解密的摘要和我们生成的摘要进行对比，就能发现我们得到的信息是否被更改 了。这个方法最要的是认证中心的可靠性，一般浏览器里会内置一些顶层的认证中心的证书，相当于我们自动信任了他们，只有 这样我们才能保证数据的安全。
+
+#### 11.DNS协议
+DNS 协议提供的是一种主机名到 IP 地址的转换服务，就是我们常说的域名系统。它是一个由分层的 DNS 服务器组成的分 布式数据库，是定义了主机如何查询这个分布式数据库的方式的应用层协议。DNS 协议运行在 UDP 协议之上，使用 53 号 端口。
+
+域名的层级结构
+域名的层级结构：主机名.次级域名.顶级域名.根域名
+
+查询过程
+DNS 的查询过程一般为，我们首先将 DNS 请求发送到本地 DNS 服务器，由本地 DNS 服务器来代为请求。
+
+从"根域名服务器"查到"顶级域名服务器"的 NS 记录和 A 记录（ IP 地址）。
+从"顶级域名服务器"查到"次级域名服务器"的 NS 记录和 A 记录（ IP 地址）。
+从"次级域名服务器"查出"主机名"的 IP 地址。
+
+递归查询和迭代查询
+递归查询指的是查询请求发出后，域名服务器代为向下一级域名服务器发出请求，最后向用户返回查询的最终结果。使用递归 查询，用户只需要发出一次查询请求。
+
+迭代查询指的是查询请求后，域名服务器返回单次查询的结果。下一级的查询由用户自己请求。使用迭代查询，用户需要发出 多次的查询请求。
+
+一般我们向本地 DNS 服务器发送请求的方式就是递归查询，因为我们只需要发出一次请求，然后本地 DNS 服务器返回给我 们最终的请求结果。而本地 DNS 服务器向其他域名服务器请求的过程是迭代查询的过程，因为每一次域名服务器只返回单次 查询的结果，下一级的查询由本地 DNS 服务器自己进行。
+
+DNS 缓存
+DNS 缓存的原理非常简单，在一个请求链中，当某个 DNS 服务器接收到一个 DNS 回答后，它能够将回答中的信息缓存在本 地存储器中。返回的资源记录中的 TTL 代表了该条记录的缓存的时间。
+
+DNS 实现负载平衡
+DNS 可以用于在冗余的服务器上实现负载平衡。因为现在一般的大型网站使用多台服务器提供服务，因此一个域名可能会对应 多个服务器地址。当用户发起网站域名的 DNS 请求的时候，DNS 服务器返回这个域名所对应的服务器 IP 地址的集合，但在 每个回答中，会循环这些 IP 地址的顺序，用户一般会选择排在前面的地址发送请求。以此将用户的请求均衡的分配到各个不 同的服务器上，这样来实现负载均衡。
+
+#### 12.UDP协议
+UDP 协议
+UDP 是一种无连接的，不可靠的传输层协议。它只提供了传输层需要实现的最低限度的功能，除了复用/分解功能和少量的差 错检测外，它几乎没有对 IP 增加其他的东西。UDP 协议适用于对实时性要求高的应用场景。
+
+特点：
+
+使用 UDP 时，在发送报文段之前，通信双方没有握手的过程，因此 UDP 被称为是无连接的传输层协议。因为没有握手 过程，相对于 TCP 来说，没有建立连接的时延。因为没有连接，所以不需要在端系统中保存连接的状态。
+
+UDP 提供尽力而为的交付服务，也就是说 UDP 协议不保证数据的可靠交付。
+
+UDP 没有拥塞控制和流量控制的机制，所以 UDP 报文段的发送速率没有限制。
+
+因为一个 UDP 套接字只使用目的地址和目的端口来标识，所以 UDP 可以支持一对一、一对多、多对一和多对多的交互 通信。
+
+UDP 首部小，只有 8 个字节。
+
+UDP 报文段结构 32 bits
+UDP 报文段由首部和应用数据组成。报文段首部包含四个字段，分别是源端口号、目的端口号、长度和检验和，每个字段的长 度为两个字节。长度字段指的是整个报文段的长度，包含了首部和应用数据的大小。校验和是 UDP 提供的一种差错校验机制。 虽然提供了差错校验的机制，但是 UDP 对于差错的恢复无能为力。
+
+#### 13.当你在浏览器中输入 Google.com 并且按下回车之后发生了什么？
+（1）首先会对 URL 进行解析，分析所需要使用的传输协议和请求的资源的路径。如果输入的 URL 中的协议或者主机名不合法，
+将会把地址栏中输入的内容传递给搜索引擎。如果没有问题，浏览器会检查 URL 中是否出现了非法字符，如果存在非法字
+符，则对非法字符进行转义后再进行下一过程。
+
+（2）浏览器会判断所请求的资源是否在缓存里，如果请求的资源在缓存里并且没有失效，那么就直接使用，否则向服务器发起新
+的请求。
+
+（3）下一步我们首先需要获取的是输入的 URL 中的域名的 IP 地址，首先会判断本地是否有该域名的 IP 地址的缓存，如果
+有则使用，如果没有则向本地 DNS 服务器发起请求。本地 DNS 服务器也会先检查是否存在缓存，如果没有就会先向根域
+名服务器发起请求，获得负责的顶级域名服务器的地址后，再向顶级域名服务器请求，然后获得负责的权威域名服务器的地
+址后，再向权威域名服务器发起请求，最终获得域名的 IP 地址后，本地 DNS 服务器再将这个 IP 地址返回给请求的用
+户。用户向本地 DNS 服务器发起请求属于递归请求，本地 DNS 服务器向各级域名服务器发起请求属于迭代请求。
+
+（4）当浏览器得到 IP 地址后，数据传输还需要知道目的主机 MAC 地址，因为应用层下发数据给传输层，TCP 协议会指定源
+端口号和目的端口号，然后下发给网络层。网络层会将本机地址作为源地址，获取的 IP 地址作为目的地址。然后将下发给
+数据链路层，数据链路层的发送需要加入通信双方的 MAC 地址，我们本机的 MAC 地址作为源 MAC 地址，目的 MAC 地
+址需要分情况处理，通过将 IP 地址与我们本机的子网掩码相与，我们可以判断我们是否与请求主机在同一个子网里，如果
+在同一个子网里，我们可以使用 APR 协议获取到目的主机的 MAC 地址，如果我们不在一个子网里，那么我们的请求应该
+转发给我们的网关，由它代为转发，此时同样可以通过 ARP 协议来获取网关的 MAC 地址，此时目的主机的 MAC 地址应
+该为网关的地址。
+
+（5）下面是 TCP 建立连接的三次握手的过程，首先客户端向服务器发送一个 SYN 连接请求报文段和一个随机序号，服务端接
+收到请求后向服务器端发送一个 SYN ACK报文段，确认连接请求，并且也向客户端发送一个随机序号。客户端接收服务器的
+确认应答后，进入连接建立的状态，同时向服务器也发送一个 ACK 确认报文段，服务器端接收到确认后，也进入连接建立
+状态，此时双方的连接就建立起来了。
+
+（6）如果使用的是 HTTPS 协议，在通信前还存在 TLS 的一个四次握手的过程。首先由客户端向服务器端发送使用的协议的版
+本号、一个随机数和可以使用的加密方法。服务器端收到后，确认加密的方法，也向客户端发送一个随机数和自己的数字证
+书。客户端收到后，首先检查数字证书是否有效，如果有效，则再生成一个随机数，并使用证书中的公钥对随机数加密，然后
+发送给服务器端，并且还会提供一个前面所有内容的 hash 值供服务器端检验。服务器端接收后，使用自己的私钥对数据解
+密，同时向客户端发送一个前面所有内容的 hash 值供客户端检验。这个时候双方都有了三个随机数，按照之前所约定的加
+密方法，使用这三个随机数生成一把秘钥，以后双方通信前，就使用这个秘钥对数据进行加密后再传输。
+
+（7）当页面请求发送到服务器端后，服务器端会返回一个 html 文件作为响应，浏览器接收到响应后，开始对 html 文件进行
+解析，开始页面的渲染过程。
+
+（8）浏览器首先会根据 html 文件构建 DOM 树，根据解析到的 css 文件构建 CSSOM 树，如果遇到 script 标签，则判端
+是否含有 defer 或者 async 属性，要不然 script 的加载和执行会造成页面的渲染的阻塞。当 DOM 树和 CSSOM 树建
+立好后，根据它们来构建渲染树。渲染树构建好后，会根据渲染树来进行布局。布局完成后，最后使用浏览器的 UI 接口对页
+面进行绘制。这个时候整个页面就显示出来了。
+
+（9）最后一步是 TCP 断开连接的四次挥手过程。
+
+#### 14.什么是 MVVM？比之 MVC 有什么区别？什么又是 MVP ？
+MVC、MVP 和 MVVM 是三种常见的软件架构设计模式，主要通过分离关注点的方式来组织代码结构，优化我们的开发效率。
+
+比如说我们实验室在以前项目开发的时候，使用单页应用时，往往一个路由页面对应了一个脚本文件，所有的页面逻辑都在一个脚本文件里。页面的渲染、数据的获取，对用户事件的响应所有的应用逻辑都混合在一起，这样在开发简单项目时，可能看不出什么问题，当时一旦项目变得复杂，那么整个文件就会变得冗长，混乱，这样对我们的项目开发和后期的项目维护是非常不利的。
+
+MVC 通过分离 Model、View 和 Controller 的方式来组织代码结构。其中 View 负责页面的显示逻辑，Model 负责存储页面的业务数据，以及对相应数据的操作。并且 View 和 Model 应用了观察者模式，当 Model 层发生改变的时候它会通知有关 View 层更新页面。Controller 层是 View 层和 Model 层的纽带，它主要负责用户与应用的响应操作，当用户与页面产生交互的时候，Co
+ntroller 中的事件触发器就开始工作了，通过调用 Model 层，来完成对 Model 的修改，然后 Model 层再去通知 View 层更新。
+
+MVP 模式与 MVC 唯一不同的在于 Presenter 和 Controller。在 MVC 模式中我们使用观察者模式，来实现当 Model 层数据发生变化的时候，通知 View 层的更新。这样 View 层和 Model 层耦合在一起，当项目逻辑变得复杂的时候，可能会造成代码的混乱，并且可能会对代码的复用性造成一些问题。MVP 的模式通过使用 Presenter 来实现对 View 层和 Model 层的解耦。MVC 中的
+Controller 只知道 Model 的接口，因此它没有办法控制 View 层的更新，MVP 模式中，View 层的接口暴露给了 Presenter 因此我们可以在 Presenter 中将 Model 的变化和 View 的变化绑定在一起，以此来实现 View 和 Model 的同步更新。这样就实现了对 View 和 Model 的解耦，Presenter 还包含了其他的响应逻辑。
+
+MVVM 模式中的 VM，指的是 ViewModel，它和 MVP 的思想其实是相同的，不过它通过双向的数据绑定，将 View 和 Model 的同步更新给自动化了。当 Model 发生变化的时候，ViewModel 就会自动更新；ViewModel 变化了，View 也会更新。这样就将 Presenter 中的工作给自动化了。我了解过一点双向数据绑定的原理，比如 vue 是通过使用数据劫持和发布订阅者模式来实现的这一功
+能。
+
+#### 15.vue 双向数据绑定原理？
+vue 通过使用双向数据绑定，来实现了 View 和 Model 的同步更新。vue 的双向数据绑定主要是通过使用数据劫持和发布订阅者模式来实现的。
+
+首先我们通过 Object.defineProperty() 方法来对 Model 数据各个属性添加访问器属性，以此来实现数据的劫持，因此当 Model 中的数据发生变化的时候，我们可以通过配置的 setter 和 getter 方法来实现对 View 层数据更新的通知。
+
+数据在 html 模板中一共有两种绑定情况，一种是使用 v-model 来对 value 值进行绑定，一种是作为文本绑定，在对模板引擎进行解析的过程中。
+
+如果遇到元素节点，并且属性值包含 v-model 的话，我们就从 Model 中去获取 v-model 所对应的属性的值，并赋值给元素的 value 值。然后给这个元素设置一个监听事件，当 View 中元素的数据发生变化的时候触发该事件，通知 Model 中的对应的属性的值进行更新。
+
+如果遇到了绑定的文本节点，我们使用 Model 中对应的属性的值来替换这个文本。对于文本节点的更新，我们使用了发布订阅者模式，属性作为一个主题，我们为这个节点设置一个订阅者对象，将这个订阅者对象加入这个属性主题的订阅者列表中。当 Model 层数据发生改变的时候，Model 作为发布者向主题发出通知，主题收到通知再向它的所有订阅者推送，订阅者收到通知后更改自己的数
+据。
+#### 16.CROS跨域
+我对浏览器的同源政策的理解是，一个域下的 js 脚本在未经允许的情况下，不能够访问另一个域的内容。这里的同源的指的是两个
+域的协议、域名、端口号必须相同，否则则不属于同一个域。
+
+同源政策主要限制了三个方面
+
+第一个是当前域下的 js 脚本不能够访问其他域下的 cookie、localStorage 和 indexDB。
+
+第二个是当前域下的 js 脚本不能够操作访问操作其他域下的 DOM。
+
+第三个是当前域下 ajax 无法发送跨域请求。
+
+同源政策的目的主要是为了保证用户的信息安全，它只是对 js 脚本的一种限制，并不是对浏览器的限制，对于一般的 img、或者
+script 脚本请求都不会有跨域的限制，这是因为这些操作都不会通过响应结果来进行可能出现安全问题的操作。
+
+解决办法：
+（1）使用 jsonp 来实现跨域请求，它的主要原理是通过动态构建 script  标签来实现跨域请求，因为浏览器对 script 标签的引入没有跨域的访问限制 。通过在请求的 url 后指定一个回调函数，然后服务器在返回数据的时候，构建一个 json 数据的包装，这个包装就是回调函数，然后返回给前端，前端接收到数据后，因为请求的是脚本文件，所以会直接执行，这样我们先前定义好的回调函数就可以被调用，从而实现了跨域请求的处理。这种方式只能用于 get 请求。
+（2）使用 CORS 的方式，CORS 是一个 W3C 标准，全称是"跨域资源共享"。CORS 需要浏览器和服务器同时支持。目前，所有浏览器都支持该功能，因此我们只需要在服务器端配置就行。浏览器将 CORS 请求分成两类：简单请求和非简单请求。对于简单请求，浏览器直接发出 CORS 请求。具体来说，就是会在头信息之中，增加一个 Origin 字段。Origin 字段用来说明本次请求来自哪个源。服务器根据这个值，决定是否同意这次请求。对于如果 Origin 指定的源，不在许可范围内，服务器会返回一个正常的 HTTP 回应。浏览器发现，这个回应的头信息没有包含 Access-Control-Allow-Origin 字段，就知道出错了，从而抛出一个错误，ajax 不会收到响应信息。如果成功的话会包含一些以 Access-Control- 开头的字段。
+
+非简单请求，浏览器会先发出一次预检请求，来判断该域名是否在服务器的白名单中，如果收到肯定回复后才会发起请求。
+（3）使用 websocket 协议，这个协议没有同源限制。
+
+（4）使用服务器来代理跨域的访问请求，就是有跨域的请求操作时发送请求给后端，让后端代为请求，然后最后将获取的结果发返回。
+
+#### 17. Cookie与Session的区别和联系还有Token
+cookie数据存放在客户的浏览器上，session数据放在服务器上；
+cookie不是很安全，别人可以分析存放在本地的COOKIE并进行 COOKIE欺骗，考虑到安全应当使用session；
+session会在一定时间内保存在服务器上。当访问增多，会比较占用你服务器的性能。考虑到减轻服务器性能方面，应当使用COOKIE；
+单个cookie在客户端的限制是3K，就是说一个站点在客户端存放的COOKIE不能超过3K；
+Cookie和Session的方案虽然分别属于客户端和服务端，但是服务端的session的实现对客户端的cookie有依赖关系的，上面我讲到服务端执行session机制时候会生成session的id值，这个id值会发送给客户端，客户端每次请求都会把这个id值放到http请求的头部发送给服务端，而这个id值在客户端会保存下来，保存的容器就是cookie，因此当我们完全禁掉浏览器的cookie的时候，服务端的session也会不能正常使用。
+
+Token：
+在大多数使用Web API的互联网公司中，tokens 是多用户下处理认证的最佳方式。
+
+以下几点特性会让你在程序中使用基于Token的身份验证
+
+1.无状态、可扩展
+
+2.支持移动设备
+
+3.跨程序调用
+
+4.安全
+基于Token的身份验证是无状态的，我们不将用户信息存在服务器中。这种概念解决了在服务端存储信息时的许多问题。NoSession意味着你的程序可以根据需要去增减机器，而不用去担心用户是否登录。
+
+1.用户通过用户名和密码发送请求。
+
+2.服务器端程序验证。
+
+3.服务器端程序返回一个带签名的token 给客户端。
+
+4.客户端储存token,并且每次访问API都携带Token到服务器端的。
+
+5.服务端验证token，校验成功则返回请求数据，校验失败则返回错误码。
+
+#### 18.Vue 的各个生命阶段是什么？
+Vue 一共有8个生命阶段，分别是创建前、创建后、加载前、加载后、更新前、更新后、销毁前和销毁后，每个阶段对应了一个生命周期的钩子函数。
+
+（1）beforeCreate 钩子函数，在实例初始化之后，在数据监听和事件配置之前触发。因此在这个事件中我们是获取不到 data 数据的。
+
+（2）created 钩子函数，在实例创建完成后触发，此时可以访问 data、methods 等属性。但这个时候组件还没有被挂载到页面中去，所以这个时候访问不到 $el 属性。一般我们可以在这个函数中进行一些页面初始化的工作，比如通过 ajax 请求数据来对页面进行初始化。
+
+（3）beforeMount 钩子函数，在组件被挂载到页面之前触发。在 beforeMount 之前，会找到对应的 template，并编译成 render 函数。
+
+（4）mounted 钩子函数，在组件挂载到页面之后触发。此时可以通过 DOM API 获取到页面中的 DOM 元素。
+
+（5）beforeUpdate 钩子函数，在响应式数据更新时触发，发生在虚拟 DOM 重新渲染和打补丁之前，这个时候我们可以对可能会被移除的元素做一些操作，比如移除事件监听器。
+
+（6）updated 钩子函数，虚拟 DOM 重新渲染和打补丁之后调用。
+
+（7）beforeDestroy 钩子函数，在实例销毁之前调用。一般在这一步我们可以销毁定时器、解绑全局事件等。
+
+（8）destroyed 钩子函数，在实例销毁之后调用，调用后，Vue 实例中的所有东西都会解除绑定，所有的事件监听器会被移除，所有的子实例也会被销毁。
+
+当我们使用 keep-alive 的时候，还有两个钩子函数，分别是 activated 和 deactivated 。用 keep-alive 包裹的组件在切换时不会进行销毁，而是缓存到内存中并执行 deactivated 钩子函数，命中缓存渲染后会执行 actived 钩子函数。
+
+#### 19.箭头函数和普通函数有什么区别？
+语法更加简洁、清晰
+箭头函数不会创建自己的 this
+箭头函数继承而来的 this 指向永远不变
+.call()/.apply()/.bind() 无法改变箭头函数中 this 的指向
+箭头函数没有原型 prototype
+箭头函数不能作为构造函数使用，不能用 new
+箭头函数没有自己的 arguments
+
+
+
 
 ## 经典笔试题
 
@@ -1465,6 +1876,8 @@ function getClimbingWays(n) {
        return +item;
      })
    }
+   //others
+   constjoinList = (list) => {return listmap(ele=>ArrayisArray(ele)?joinList(ele):ele)join('');};
    ```
    详细资料可以参考：
    [《JavaScript专题之数组扁平化》](https://github.com/mqyqingfeng/Blog/issues/36)
@@ -1676,8 +2089,491 @@ function getClimbingWays(n) {
 
     }
    ```
+#### 13. 发布订阅模式和手写
+```js
+var events = (function() {
+  var topics = {};
 
+  return {
+    publish: function(topic, info) {
+      console.log('publish a topic:' + topic);
+      if (topics.hasOwnProperty(topic)) {
+        topics[topic].forEach(function(handler) {
+          handler(info ? info : {});
+        })
+      }
+    },
+    subscribe: function(topic, handler) {
+      console.log('subscribe an topic:' + topic);
+      if (!topics.hasOwnProperty(topic)) {
+        topics[topic] = [];
+      }
 
+      topics[topic].push(handler);
+    },
+    remove: function(topic, handler) {
+      if (!topics.hasOwnProperty(topic)) {
+        return;
+      }
+
+      var handlerIndex = -1;
+      topics[topic].forEach(function(element, index) {
+        if (element === handler) {
+          handlerIndex = index;
+        }
+      });
+
+      if (handlerIndex >= 0) {
+        topics[topic].splice(handlerIndex, 1);
+      }
+    },
+    removeAll: function(topic) {
+      console.log('remove all the handler on the topic:' + topic);
+      if (topics.hasOwnProperty(topic)) {
+        topics[topic].length = 0;
+      }
+    }
+  }
+})();
+```
+用例：
+```js
+//主题监听函数
+var handler = function(info) {
+    console.log(info);
+}
+//订阅hello主题
+events.subscribe('hello', handler);
+
+//发布hello主题
+events.publish('hello', 'hello world');
+```
+#### 14. 节流与防抖
+```js
+// 函数防抖： 在事件被触发 n 秒后再执行回调，如果在这 n 秒内事件又被触发，则重新计时。
+
+// 函数节流： 规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效。
+
+// 函数防抖的实现
+function debounce(fn, wait) {
+  var timer = null;
+
+  return function() {
+    var context = this,
+      args = arguments;
+
+    // 如果此时存在定时器的话，则取消之前的定时器重新记时
+    if (timer) {
+      clearTimeout(timer);
+      timer = null;
+    }
+
+    // 设置定时器，使事件间隔指定事件后执行
+    timer = setTimeout(() => {
+      fn.apply(context, args);
+    }, wait);
+  };
+}
+
+// 函数节流的实现;
+function throttle(fn, delay) {
+  var preTime = Date.now();
+
+  return function() {
+    var context = this,
+      args = arguments,
+      nowTime = Date.now();
+
+    // 如果两次时间间隔超过了指定时间，则执行函数。
+    if (nowTime - preTime >= delay) {
+      preTime = Date.now();
+      return fn.apply(context, args);
+    }
+  };
+}
+```
+#### 15.字符串数组转数组
+<a src="https://www.zhihu.com/question/408223837">字符串数组转数组</a>
+#### 16.深拷贝与浅拷贝
+浅拷贝指的是将一个对象的属性值复制到另一个对象，如果有的属性的值为引用类型的话，那么会将这个引用的地址复制给对象，因此两个对象会有同一个引用类型的引用。浅拷贝可以使用  Object.assign 和展开运算符来实现。
+
+深拷贝相对浅拷贝而言，如果遇到属性值为引用类型的时候，它新建一个引用类型并将对应的值复制给它，因此对象获得的一个新的引用类型而不是一个原有类型的引用。深拷贝对于一些对象可以使用 JSON 的两个函数来实现，但是由于 JSON 的对象格式比 js 的对象格式更加严格，所以如果属性值里边出现函数或者 Symbol 类型的值时，会转换失败。
+```js
+// 浅拷贝的实现;
+
+function shallowCopy(object) {
+  // 只拷贝对象
+  if (!object || typeof object !== "object") return;
+
+  // 根据 object 的类型判断是新建一个数组还是对象
+  let newObject = Array.isArray(object) ? [] : {};
+
+  // 遍历 object，并且判断是 object 的属性才拷贝
+  for (let key in object) {
+    if (object.hasOwnProperty(key)) {
+      newObject[key] = object[key];
+    }
+  }
+
+  return newObject;
+}
+
+// 深拷贝的实现;
+
+function deepCopy(object) {
+  if (!object || typeof object !== "object") return object;
+
+  let newObject = Array.isArray(object) ? [] : {};
+
+  for (let key in object) {
+    if (object.hasOwnProperty(key)) {
+      newObject[key] = deepCopy(object[key]);
+    }
+  }
+
+  return newObject;
+}
+
+```
+#### 17.手写 call、apply 及 bind 函数
+call 函数的实现步骤：
+
+1.判断调用对象是否为函数，即使我们是定义在函数的原型上的，但是可能出现使用 call 等方式调用的情况。
+2.判断传入上下文对象是否存在，如果不存在，则设置为 window 。
+3.处理传入的参数，截取第一个参数后的所有参数。
+4.将函数作为上下文对象的一个属性。
+5.使用上下文对象来调用这个方法，并保存返回结果。
+6.删除刚才新增的属性。
+7.返回结果。
+apply 函数的实现步骤：
+
+1.判断调用对象是否为函数，即使我们是定义在函数的原型上的，但是可能出现使用 call 等方式调用的情况。
+2.判断传入上下文对象是否存在，如果不存在，则设置为 window 。
+3.将函数作为上下文对象的一个属性。
+4.判断参数值是否传入
+4.使用上下文对象来调用这个方法，并保存返回结果。
+5.删除刚才新增的属性
+6.返回结果
+bind 函数的实现步骤：
+
+1.判断调用对象是否为函数，即使我们是定义在函数的原型上的，但是可能出现使用 call 等方式调用的情况。
+2.保存当前函数的引用，获取其余传入参数值。
+3.创建一个函数返回
+4.函数内部使用 apply 来绑定函数调用，需要判断函数作为构造函数的情况，这个时候需要传入当前函数的 this 给 apply 调用，其余情况都传入指定的上下文对象。
+```js
+// call函数实现
+Function.prototype.myCall = function(context) {
+  // 判断调用对象
+  if (typeof this !== "function") {
+    console.error("type error");
+  }
+
+  // 获取参数
+  let args = [...arguments].slice(1),
+    result = null;
+
+  // 判断 context 是否传入，如果未传入则设置为 window
+  context = context || window;
+
+  // 将调用函数设为对象的方法
+  context.fn = this;
+
+  // 调用函数
+  result = context.fn(...args);
+
+  // 将属性删除
+  delete context.fn;
+
+  return result;
+};
+
+// apply 函数实现
+
+Function.prototype.myApply = function(context) {
+  // 判断调用对象是否为函数
+  if (typeof this !== "function") {
+    throw new TypeError("Error");
+  }
+
+  let result = null;
+
+  // 判断 context 是否存在，如果未传入则为 window
+  context = context || window;
+
+  // 将函数设为对象的方法
+  context.fn = this;
+
+  // 调用方法
+  if (arguments[1]) {
+    result = context.fn(...arguments[1]);
+  } else {
+    result = context.fn();
+  }
+
+  // 将属性删除
+  delete context.fn;
+
+  return result;
+};
+
+// bind 函数实现
+Function.prototype.myBind = function(context) {
+  // 判断调用对象是否为函数
+  if (typeof this !== "function") {
+    throw new TypeError("Error");
+  }
+
+  // 获取参数
+  var args = [...arguments].slice(1),
+    fn = this;
+
+  return function Fn() {
+    // 根据调用方式，传入不同绑定值
+    return fn.apply(
+      this instanceof Fn ? this : context,
+      args.concat(...arguments)
+    );
+  };
+};
+
+```
+#### 18.函数柯里化的实现
+```js
+// 函数柯里化指的是一种将使用多个参数的一个函数转换成一系列使用一个参数的函数的技术。
+
+function curry(fn, args) {
+  // 获取函数需要的参数长度
+  let length = fn.length;
+
+  args = args || [];
+
+  return function() {
+    let subArgs = args.slice(0);
+
+    // 拼接得到现有的所有参数
+    for (let i = 0; i < arguments.length; i++) {
+      subArgs.push(arguments[i]);
+    }
+
+    // 判断参数的长度是否已经满足函数所需参数的长度
+    if (subArgs.length >= length) {
+      // 如果满足，执行函数
+      return fn.apply(this, subArgs);
+    } else {
+      // 如果不满足，递归返回科里化的函数，等待参数的传入
+      return curry.call(this, fn, subArgs);
+    }
+  };
+}
+
+// es6 实现
+function curry(fn, ...args) {
+  return fn.length <= args.length ? fn(...args) : curry.bind(null, fn, ...args);
+}
+
+```
+#### 19.手写一个 jsonp
+```js
+function jsonp(url, params, callback) {
+  // 判断是否含有参数
+  let queryString = url.indexOf("?") === "-1" ? "?" : "&";
+
+  // 添加参数
+  for (var k in params) {
+    if (params.hasOwnProperty(k)) {
+      queryString += k + "=" + params[k] + "&";
+    }
+  }
+
+  // 处理回调函数名
+  let random = Math.random()
+      .toString()
+      .replace(".", ""),
+    callbackName = "myJsonp" + random;
+
+  // 添加回调函数
+  queryString += "callback=" + callbackName;
+
+  // 构建请求
+  let scriptNode = document.createElement("script");
+  scriptNode.src = url + queryString;
+
+  window[callbackName] = function() {
+    // 调用回调函数
+    callback(...arguments);
+
+    // 删除这个引入的脚本
+    document.getElementsByTagName("head")[0].removeChild(scriptNode);
+  };
+
+  // 发起请求
+  document.getElementsByTagName("head")[0].appendChild(scriptNode);
+}
+
+```
+
+#### 20.使用闭包实现每隔一秒打印 1,2,3,4
+```js
+// 使用闭包实现
+for (var i = 0; i < 5; i++) {
+  (function(i) {
+    setTimeout(function() {
+      console.log(i);
+    }, i * 1000);
+  })(i);
+}
+
+// 使用 let 块级作用域
+
+for (let i = 0; i < 5; i++) {
+  setTimeout(function() {
+    console.log(i);
+  }, i * 1000);
+}
+
+```
+#### 21.new 的实现
+```js
+function create (ctr) {
+    // 创建一个空对象
+    let obj = new Object()
+    // 获取构造函数
+    let Con = [].shift.call(arguments)
+    // 将对象（实例）的 __proto__ 和构造函数的 prototype 绑定
+    obj.__proto__ = Con.prototype
+    // 绑定this，以及参数
+    let result = Con.apply(obj, arguments);
+    // 确保返回的是对象
+    return typeof result === 'object'? result : obj;
+}
+
+```
+#### 22.instanceof 的原理
+```js
+function new_instance_of(leftVaule, rightVaule) { 
+    let rightProto = rightVaule.prototype; // 取右表达式的 prototype 值
+    leftVaule = leftVaule.__proto__; // 取左表达式的__proto__值
+    while (true) {
+    	if (leftVaule === null) {
+            return false;	
+        }
+        if (leftVaule === rightProto) {
+            return true;	
+        } 
+        leftVaule = leftVaule.__proto__ 
+    }
+}
+```
+#### 23.手写一个 Promise
+```js
+const PENDING = "pending";
+const RESOLVED = "resolved";
+const REJECTED = "rejected";
+
+function MyPromise(fn) {
+  // 保存初始化状态
+  var self = this;
+
+  // 初始化状态
+  this.state = PENDING;
+
+  // 用于保存 resolve 或者 rejected 传入的值
+  this.value = null;
+
+  // 用于保存 resolve 的回调函数
+  this.resolvedCallbacks = [];
+
+  // 用于保存 reject 的回调函数
+  this.rejectedCallbacks = [];
+
+  // 状态转变为 resolved 方法
+  function resolve(value) {
+    // 判断传入元素是否为 Promise 值，如果是，则状态改变必须等待前一个状态改变后再进行改变
+    if (value instanceof MyPromise) {
+      return value.then(resolve, reject);
+    }
+
+    // 保证代码的执行顺序为本轮事件循环的末尾
+    setTimeout(() => {
+      // 只有状态为 pending 时才能转变，
+      if (self.state === PENDING) {
+        // 修改状态
+        self.state = RESOLVED;
+
+        // 设置传入的值
+        self.value = value;
+
+        // 执行回调函数
+        self.resolvedCallbacks.forEach(callback => {
+          callback(value);
+        });
+      }
+    }, 0);
+  }
+
+  // 状态转变为 rejected 方法
+  function reject(value) {
+    // 保证代码的执行顺序为本轮事件循环的末尾
+    setTimeout(() => {
+      // 只有状态为 pending 时才能转变
+      if (self.state === PENDING) {
+        // 修改状态
+        self.state = REJECTED;
+
+        // 设置传入的值
+        self.value = value;
+
+        // 执行回调函数
+        self.rejectedCallbacks.forEach(callback => {
+          callback(value);
+        });
+      }
+    }, 0);
+  }
+
+  // 将两个方法传入函数执行
+  try {
+    fn(resolve, reject);
+  } catch (e) {
+    // 遇到错误时，捕获错误，执行 reject 函数
+    reject(e);
+  }
+}
+
+MyPromise.prototype.then = function(onResolved, onRejected) {
+  // 首先判断两个参数是否为函数类型，因为这两个参数是可选参数
+  onResolved =
+    typeof onResolved === "function"
+      ? onResolved
+      : function(value) {
+          return value;
+        };
+
+  onRejected =
+    typeof onRejected === "function"
+      ? onRejected
+      : function(error) {
+          throw error;
+        };
+
+  // 如果是等待状态，则将函数加入对应列表中
+  if (this.state === PENDING) {
+    this.resolvedCallbacks.push(onResolved);
+    this.rejectedCallbacks.push(onRejected);
+  }
+
+  // 如果状态已经凝固，则直接执行对应状态的函数
+
+  if (this.state === RESOLVED) {
+    onResolved(this.value);
+  }
+
+  if (this.state === REJECTED) {
+    onRejected(this.value);
+  }
+};
+
+```
 # 常见面试智力题总结
 
 #### 1. 时针与分针夹角度数问题？
